Added AsianExotics to main.cc

--- a/Doc_opt_prc.ipynb
+++ b/Doc_opt_prc.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "This is a simple collection of classes and functions to price, and find the greeks for, a range of options including European, American and Asian Calls and Puts, and options with more exotic (including path dependent) payoff functions specified by the user. Underlying calculations are performed via implementations of binary trees, MonteCarlo simulations, and finite difference numerical calculations, e.g., see Hull 11th Ed., Ch 21.\n",
+    "This is a simple collection of classes and functions to price, and find the greeks for, a range of options including European, American and Asian Calls and Puts, and options with more exotic (including path dependent) payoff functions specified by the user. Underlying calculations are performed via implementations of binary trees and MonteCarlo simulations, e.g., see Hull 11th Ed., Ch 21. European and American options are priced on the binomial tree, European and Asian options are priced on the Monte Carlo simulator, the path dependent contracts -priced on the Monte Carlo simulator, do not accomodate early excercise, but are otherwise general.\n",
     "\n",
-    "The next section provides example use cases showing how to construct an option contract's terms, construct the underlying asset, and construct the option from those. Section 1 prices an American Put option on a binomial tree following an example from Hull. Section 2 shows how to obtain the sensitivities (Greeks) of this option, and compares results with RQuantLib(in addition to Hull). Section 3 shows how to specify arbitrary payoffs to price exotic American or European options on the binary tree. Section 4 illustrates the use of the Monte Carlo pricing engine to get the price and greeks of European options, goes on to illustrate its use in valuing path dependent Asian options, and then how to specify and value arbitrary path dependent contracts.\n",
+    "The next section provides example use cases showing how to construct an option contract's terms, construct the underlying asset, and construct the option from those. Section 1 prices an American Put option on a binomial tree following an example from Hull. Section 2 shows how to obtain the sensitivities (Greeks) of this option, and compares results with RQuantLib(in addition to Hull). Section 3 shows how to specify arbitrary payoffs to price exotic American or European options on the binary tree. Section 4 illustrates the use of the Monte Carlo pricing engine to get the price and greeks of European options, goes on to illustrate its use in valuing path dependent (Asian) options, and then how to specify and value arbitrary path dependent contracts.\n",
     "\n",
     "# Example Uses \n",
     "### Technicalities\n",
@@ -1218,7 +1218,7 @@
    "source": [
     "### 4) Monte Carlo pricing\n",
     "Many options can be priced by Monte Carlo simulating the underlying asset's risk-neutral stochastic realizations. For options whose payoff depends only on the underlying asset price at time $T$(vs the entire path in time), we use $$S(T)=S(0)\\cdot exp[(\\mu - \\sigma^2/2)T + \\epsilon \\sigma \\sqrt{T}],$$ where $\\mu=r-q$ is the expected risk-neutral return. Many draws, $\\epsilon$, are made from the standard Normal distribution. The mean of their present values is our estimate of the current option price, and $\\sqrt{\\text{their variance}/ N}$ gives an estimate of the accuracy of this estimate.\n",
-    "As the value of an American option depends on forward estimates of its' value, they are not among the 'many options' referred to above; -use the binary tree for these. We start by pricing a European put option. RQuantLib gives:\n",
+    "As the value of an American option depends on forward estimates of its' value, they are not among the 'many options' referred to above; -use the binary tree for these. And, generally, contracts with early excercise provision can not be priced via the Monte Carlo pricer. We start by pricing a European put option. RQuantLib gives:\n",
     "```\n",
     "> EuropeanOption(\"put\", 40.2, 43.0, 0.2, 0.07, 3/12, 0.32)\n",
     "Concise summary of valuation for EuropeanOption \n",
@@ -1232,9 +1232,7 @@
    "execution_count": 10,
    "id": "b9cd5402",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -1294,12 +1292,12 @@
       "Euro put with Monte Carlo pricer with N_sims: 10000, N_steps: 1000\n",
       "r  Style    Class  K   T     S_o q sigma\n",
       "0.07 European Put   43 0.25 40.2  0.2  0.32:\n",
-      "price: 5.05146, std_dev: 0.0103316\n",
-      "delta: -0.675709\n",
-      "gamma: 0.0515724\n",
-      "vega: 6.54272\n",
-      "theta: -7.37153\n",
-      "rho: -8.05446\n"
+      "price: 5.05728, std_dev: 0.0102288\n",
+      "delta: -0.66921\n",
+      "gamma: 0.0544345\n",
+      "vega: 6.62198\n",
+      "theta: -7.38657\n",
+      "rho: -7.99056\n"
      ]
     }
    ],
@@ -1353,12 +1351,12 @@
       "Euro Straddle with MC pricer with N_sims: 10000, N_steps: 1000\n",
       "r    Style    Class    K T    S_o  q  sigma\n",
       "0.07 European Other   -1 0.25 40.2  0.2  0.32:\n",
-      "price: 5.06472, std_dev: 0.0374859\n",
-      "delta: -0.0863202\n",
-      "gamma: 0.114432\n",
-      "vega: 15.2001\n",
-      "theta: -9.84578\n",
-      "rho: -2.12071\n"
+      "price: 5.04656, std_dev: 0.0371802\n",
+      "delta: -0.0986562\n",
+      "gamma: 0.116326\n",
+      "vega: 15.0834\n",
+      "theta: -9.83639\n",
+      "rho: -2.24041\n"
      ]
     }
    ],
@@ -1412,12 +1410,12 @@
       "Euro call with MC pricer with N_sims: 100000, N_steps: 1000\n",
       "r    Style    Class  K T   S_o  q  sigma\n",
       "0.07 European Call  40 0.25 60  0.2  0.32:\n",
-      "price: 17.7898, std_dev: 0.00371468\n",
-      "delta: 0.943616\n",
-      "gamma: 0.00216121\n",
-      "vega: 0.618377\n",
-      "theta: 8.2287\n",
-      "rho: 9.7063\n"
+      "price: 17.7914, std_dev: 0.00372732\n",
+      "delta: 0.943782\n",
+      "gamma: 0.00199947\n",
+      "vega: 0.611413\n",
+      "theta: 8.23312\n",
+      "rho: 9.7091\n"
      ]
     }
    ],
@@ -1453,7 +1451,7 @@
    "metadata": {},
    "source": [
     "#### Path dependent payoffs -Asian Options\n",
-    "Asian options have payoffs which depend on the actual price path of the underlying asset for $t$ in $[0,T]$. For example, an AsianPrice call option has a payoff $max(\\tilde{S} - K, 0 $, where $\\tilde{S}$ is either the arithmetic or geometric average of $S(t)$ along the path. One effect of this is to make the option's payoff less sensitive to large moves in $S$ at expiry.\n"
+    "Asian options have payoffs which depend on the actual price path of the underlying asset for $t$ in $[0,T]$. For example, an AsianPrice call option has a payoff $max(\\tilde{S} - K, 0) $, where $\\tilde{S}$ is either the arithmetic or geometric average of $S(t)$ along the path. One effect of this is to make the option's payoff less sensitive to large moves in $S$ at expiry.\n"
    ]
   },
   {
@@ -1474,12 +1472,12 @@
       "AsianPrc put with Monte Carlo pricer with N_sims: 10000, N_steps: 1000\n",
       "r    Style    AvgType   Class  K  T  S_o q sigma\n",
       "0.07 AsianPrc Arithmetic Put   50 0.5 49  0  0.3:\n",
-      "price: 2.4502, std_dev: 0.0150526\n",
-      "delta: -0.477887\n",
-      "gamma: 0.0627601\n",
-      "theta: -1.31522\n",
-      "rho: -6.96963\n",
-      "vega: 7.9231\n"
+      "price: 2.42792, std_dev: 0.0150047\n",
+      "delta: -0.480824\n",
+      "gamma: 0.0635803\n",
+      "theta: -1.36682\n",
+      "rho: -6.99862\n",
+      "vega: 7.86196\n"
      ]
     }
    ],
@@ -1556,12 +1554,12 @@
       "AsianPrc Put Geometric path avgeraging with N_sims: 10000, N_steps: 1000\n",
       "r    Style    AvgType   Class  K  T  S_o q sigma\n",
       "0.07 AsianPrc Geometric Put   50 0.5 49  0  0.3:\n",
-      "price: 2.49483, std_dev: 0.0152247\n",
-      "delta: -0.487321\n",
-      "gamma: 0.067376\n",
-      "theta: -1.51503\n",
-      "rho: -7.21826\n",
-      "vega: 8.37427\n"
+      "price: 2.52365, std_dev: 0.0153097\n",
+      "delta: -0.485835\n",
+      "gamma: 0.0623526\n",
+      "theta: -1.46552\n",
+      "rho: -7.21427\n",
+      "vega: 8.45535\n"
      ]
     }
    ],
@@ -1585,9 +1583,230 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cb2dc9c",
+   "metadata": {},
+   "source": [
+    "#### Arbitrary Path Averaging and Payoffs\n",
+    "I have defined contracts which depend on some type of path average/accumulation, and having no provision for early excercise, as Asian Options. Asian Price`(Terms::Style==AsianPrc)` options payoff at expiration (no early excercise) $max(\\tilde{S}-K, 0)$ if `Terms::Type==Call`, and $max(K-\\tilde{S}, 0)$ if `Terms::Type==Put`, where $\\tilde{S}$ is either the arithmetic `(Terms::AvgType==Arith)` or geometric `(Terms::AvgType==Geom)` average along the price path $S(t), t\\in(0, T)$. Asian Strike (call and put) `(Terms::Style==AsianStrike)` options payoff at expiration in the same way as the Asian Price options except with the replacements $\\tilde{S}\\rightarrow S(T)$ and $K\\rightarrow\\tilde{S}$.\n",
+    "\n",
+    "Non-path dependent European and American options can be priced as shown above in the Section \"Exotic American and European Options\". There we needed to specify a payoff function and give the option `Terms::Style==Other`. Europeans can be priced via binary tree or by Monte Carlo, Americans require the binary tree as the Monte Carlo does not account for early excercise.\n",
+    "\n",
+    "Asian contracts which depend on a path average which is not the standard arithmetic or gemometric average, or whose payoff is not of the standard vanilla call or put in terms of those averages, are contracts with `Terms::Style==AsianExotic` where we must specify both the payoff function and the path averaging function. This is illustrated here with 4 different contracts of increasing complexity. Enjoy!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0c93bcbe",
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "AsianExotic arithmetic_avg payoff MC pricer with N_sims: 10000, N_steps: 1000\n",
+      "r    Style     AvgType Class  K  T  S_o  q  sigma\n",
+      "0.07 AsianExotic Other Other   - 0.5 49  0.01  0.3:\n",
+      "price: 48.0366, std_dev: 0.00631772\n",
+      "delta: 0.980338\n",
+      "gamma: -8.19299e-13\n",
+      "theta: 1.88808\n",
+      "rho: -11.935\n",
+      "vega: 0.0288004\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Price an AsianExotic, arithmetic path avg is the payoff:\n",
+    "std::function<double(double, double)> path_payoff{\n",
+    "    [](double path_avg, double) { return path_avg; }\n",
+    "};\n",
+    "\n",
+    "T = 6 / 12.0;\n",
+    "Terms terms_asianex_arith{ Terms::Style::AsianExotic, Terms::Type::Other, T, path_payoff,\n",
+    "                               Terms::arith_path_accum_fn, 0.0 };\n",
+    "S_o = 49.0;\n",
+    "q = 0.01;\n",
+    "sigma = 0.3;\n",
+    "Asset underlying_asian2{ S_o, q, sigma };\n",
+    "Option asianex_arith(terms_asianex_arith, underlying_asian2);\n",
+    "r = 0.07;\n",
+    "N_steps = 1000;\n",
+    "N_sims = 10000;\n",
+    "antithetic = true;\n",
+    "get_greeks = true;\n",
+    "sd_prc = 0.0;\n",
+    "asianex_arith.MC_prc(N_sims, N_steps, r, get_greeks, antithetic, sd_prc);\n",
+    "cout << \"\\nAsianExotic arithmetic_avg payoff MC pricer with N_sims: \" << N_sims << \", N_steps: \" << N_steps << '\\n'\n",
+    "    << \"r    Style     AvgType Class  K  T  S_o  q  sigma\\n\"\n",
+    "    << r << ' ' << asianex_arith << \":\\n\"\n",
+    "    << \"price: \" << asianex_arith.price() << \", std_dev: \" << sd_prc << '\\n'\n",
+    "    << \"delta: \" << asianex_arith.delta() << '\\n' << \"gamma: \" << asianex_arith.gamma() << '\\n'\n",
+    "    << \"theta: \" << asianex_arith.theta() << '\\n' << \"rho: \" << asianex_arith.rho() << '\\n'\n",
+    "    << \"vega: \" << asianex_arith.vega() << endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8a6c7fa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Define tanh path accumulation function used below:\n",
+    "std::function<void(int, double, double&)> path_accum_tanh;\n",
+    "double S_o = 49.0;\n",
+    "\n",
+    "path_accum_tanh = [S_o](int idx, double S, double& accum) { \n",
+    "    accum += (std::tanh(S / S_o) - accum) / idx; \n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a0247e2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "AsianExotic tanh_path_avg 0_call MC pricer with N_sims: 10000, N_steps: 1000\n",
+      "r    Style     AvgType Class  K  T  S_o  q  sigma\n",
+      "0.07 AsianExotic Other Other   - 0.5 49  0.01  0.3:\n",
+      "price: 0.734559, std_dev: 2.68874e-05\n",
+      "delta: 0.00808026\n",
+      "gamma: -0.000252683\n",
+      "theta: 0.0532506\n",
+      "rho: -0.268958\n",
+      "vega: -0.0451952\n"
+     ]
+    }
+   ],
+   "source": [
+    "// AsianExotic pays off tanh average:\n",
+    "T = 6/12.0;\n",
+    "Terms terms_asian_tanh_call{ Terms::Style::AsianExotic, Terms::Type::Other, T, path_payoff,\n",
+    "                             path_accum_tanh, 0.0 };\n",
+    "Option asian_tanh_call(terms_asian_tanh_call, underlying_asian2);\n",
+    "r = 0.07;\n",
+    "N_steps = 1000;\n",
+    "N_sims = 10000;\n",
+    "antithetic = true;\n",
+    "get_greeks = true;\n",
+    "sd_prc = 0.0;\n",
+    "asian_tanh_call.MC_prc(N_sims, N_steps, r, get_greeks, antithetic, sd_prc);\n",
+    "cout << \"\\nAsianExotic tanh_path_avg 0_call MC pricer with N_sims: \" << N_sims << \", N_steps: \" << N_steps << '\\n'\n",
+    "    << \"r    Style     AvgType Class  K  T  S_o  q  sigma\\n\"\n",
+    "    << r << ' ' << asian_tanh_call << \":\\n\"\n",
+    "    << \"price: \" << asian_tanh_call.price() << \", std_dev: \" << sd_prc << '\\n'\n",
+    "    << \"delta: \" << asian_tanh_call.delta() << '\\n' << \"gamma: \" << asian_tanh_call.gamma() << '\\n'\n",
+    "    << \"theta: \" << asian_tanh_call.theta() << '\\n' << \"rho: \" << asian_tanh_call.rho() << '\\n'\n",
+    "    << \"vega: \" << asian_tanh_call.vega() << endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f5e46a83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "AsianExotic abs(sin(tanh_path_avg)) MC pricer with N_sims: 10000, N_steps: 1000\n",
+      "r    Style     AvgType Class  K  T  S_o  q  sigma\n",
+      "0.07 AsianExotic Other Other   - 0.5 49  0.01  0.3:\n",
+      "price: 0.615573, std_dev: 0.000579606\n",
+      "delta: 0.0419687\n",
+      "gamma: -0.00142275\n",
+      "theta: 0.0521811\n",
+      "rho: 0.207824\n",
+      "vega: -0.238629\n"
+     ]
+    }
+   ],
+   "source": [
+    "   // abs(sin(tanh_path_avg)) payoff function:\n",
+    "    std::function<double(double, double)> path_payoff_sin_tanh_abs{\n",
+    "        [](double path_avg, double S) { return std::abs(std::sin((path_avg - std::tanh(S)) / (std::tanh(S) / 10.0))); }\n",
+    "    };\n",
+    "\n",
+    "    Terms terms_asian_tanh_sin_abs{ Terms::Style::AsianExotic, Terms::Type::Other, T, path_payoff_sin_tanh_abs,\n",
+    "                                 path_accum_tanh, 0.0 };\n",
+    "    Option asian_tanh_sin_abs{ terms_asian_tanh_sin_abs, underlying_asian2 };\n",
+    "    antithetic = true;\n",
+    "    get_greeks = true;\n",
+    "    sd_prc = 0.0;\n",
+    "    asian_tanh_sin_abs.MC_prc(N_sims, N_steps, r, get_greeks, antithetic, sd_prc);\n",
+    "    cout << \"\\nAsianExotic abs(sin(tanh_path_avg)) MC pricer with N_sims: \" << N_sims << \", N_steps: \" << N_steps << '\\n'\n",
+    "        << \"r    Style     AvgType Class  K  T  S_o  q  sigma\\n\"\n",
+    "        << r << ' ' << asian_tanh_sin_abs << \":\\n\"\n",
+    "        << \"price: \" << asian_tanh_sin_abs.price() << \", std_dev: \" << sd_prc << '\\n'\n",
+    "        << \"delta: \" << asian_tanh_sin_abs.delta() << '\\n' << \"gamma: \" << asian_tanh_sin_abs.gamma() << '\\n'\n",
+    "        << \"theta: \" << asian_tanh_sin_abs.theta() << '\\n' << \"rho: \" << asian_tanh_sin_abs.rho() << '\\n'\n",
+    "        << \"vega: \" << asian_tanh_sin_abs.vega() << endl;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "454ed119",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "AsianExotic sin(tanh_path_avg) MC pricer with N_sims: 10000, N_steps: 1000\n",
+      "r    Style     AvgType Class  K  T  S_o  q  sigma\n",
+      "0.07 AsianExotic Other Other   - 0.5 49  0.01  0.3:\n",
+      "price: -0.583391, std_dev: 0.00109367\n",
+      "delta: -0.0537609\n",
+      "gamma: 0.00540238\n",
+      "theta: -0.174151\n",
+      "rho: -0.367473\n",
+      "vega: 0.725033\n"
+     ]
+    }
+   ],
+   "source": [
+    "   // AsianExotic sin(tanh_path_avg) payoff:\n",
+    "    std::function<double(double, double)> path_payoff_sin_tanh{\n",
+    "        [](double path_avg, double S) { return std::sin((path_avg - std::tanh(S)) / (std::tanh(S) / 10.0)); }\n",
+    "    };\n",
+    "\n",
+    "    Terms terms_asian_tanh_sin{ Terms::Style::AsianExotic, Terms::Type::Other, T, path_payoff_sin_tanh,\n",
+    "                                 path_accum_tanh, 0.0 };\n",
+    "    Option asian_tanh_sin{ terms_asian_tanh_sin, underlying_asian2 };\n",
+    "    antithetic = true;\n",
+    "    get_greeks = true;\n",
+    "    sd_prc = 0.0;\n",
+    "    asian_tanh_sin.MC_prc(N_sims, N_steps, r, get_greeks, antithetic, sd_prc);\n",
+    "    cout << \"\\nAsianExotic sin(tanh_path_avg) MC pricer with N_sims: \" << N_sims << \", N_steps: \" << N_steps << '\\n'\n",
+    "        << \"r    Style     AvgType Class  K  T  S_o  q  sigma\\n\"\n",
+    "        << r << ' ' << asian_tanh_sin << \":\\n\"\n",
+    "        << \"price: \" << asian_tanh_sin.price() << \", std_dev: \" << sd_prc << '\\n'\n",
+    "        << \"delta: \" << asian_tanh_sin.delta() << '\\n' << \"gamma: \" << asian_tanh_sin.gamma() << '\\n'\n",
+    "        << \"theta: \" << asian_tanh_sin.theta() << '\\n' << \"rho: \" << asian_tanh_sin.rho() << '\\n'\n",
+    "        << \"vega: \" << asian_tanh_sin.vega() << endl;\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17a75e88",
+   "id": "7a14929e",
    "metadata": {},
    "outputs": [],
    "source": []
