Note about cloning repo.

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Read Doc_opt_prc.ipynb
+I found that the jupyter notebook was formatted much nicer (collapsable code cells) after I cloned this repo and opened locally.
