static mt19937 in MC_prc_raw now constructed with the prvalue returned by random_device{}, i.e., static std::mt19937 gen{ (std::random_device{})() }; This doesn't leave the random_device in memory after it is no longer needed.

--- a/Doc_opt_prc.ipynb
+++ b/Doc_opt_prc.ipynb
@@ -466,10 +466,9 @@
     "        double g = r - q - sigma * sigma / 2;  // risk neutral growth rate of lnS.\n",
     "        double df = exp(-r * T);\n",
     "\n",
-    "        // long unsigned int seed = 1;    // Replace next 2 lines with these 2 for reproducing random \n",
+    "        // long unsigned int seed = 1;    // Replace next line with these 2 for reproducing random \n",
     "        // static std::mt19937 gen{seed}; // bit streams for testing.\n",
-    "        std::random_device rd;\n",
-    "        static std::mt19937 gen{ rd() };\n",
+    "        static std::mt19937 gen{ (std::random_device{})() };\n",
     "        std::normal_distribution<> norm{ };\n",
     "\n",
     "        double cumm_P{ 0.0 };\n",
