Update study of self-similar BTree prc vs N_steps on an Amer Put.

--- a/Doc_Ctrl_Var2.ipynb
+++ b/Doc_Ctrl_Var2.ipynb
@@ -8,7 +8,7 @@
     "# Control Variate Technique for Binomial Tree Prices\n",
     "\n",
     "### Motivation\n",
-    "This illustrates the use of the Control Variate technique for reducing the variance of an estimate for an option price calculated on a Binomial tree. See  https://en.wikipedia.org/wiki/Control_variates or Simulation by S.M. Ross. The application to pricing American Put options using the corresponding European option is discussed by \n",
+    "This illustrates the use of the Control Variate technique for reducing the variance of an estimate for an option price calculated on a Binomial tree. See  https://en.wikipedia.org/wiki/Control_variates or Simulation by S.M. Ross for discussions of control variates in general. The application to pricing American Put options using the corresponding European option is discussed by \n",
     "Hull \\& White in 'The Use of the Control Variate Technique in Option Pricing', J. of Finance, 42 (June 1987), 281-300; THE CONVERGENCE OF BINOMIAL TREES FOR PRICING\n",
     "THE AMERICAN PUT M.Joshi 2008; and\n",
     "[On the use and improvement of Hull and White’s control variate technique](https://scholars.lib.ntu.edu.tw/bitstream/123456789/165629/1/22.pdf)\n",
@@ -23,9 +23,9 @@
     "$${\\mathbb{V}\\text{ar}[Z]\\over \\mathbb{V}\\text{ar}[A]} = (1 - \\text{Corr}^2[A,E])$$\n",
     "By choosing $A, E$ as the price of the American, European option calculated on the binomial tree, and setting $\\mu_E$ as the Black-Scholes price of the European option, $Z$ calculated from the binomial tree will estimate the price of the American option with reduced variance. \n",
     "\n",
-    "Strictly speaking, this technique applies to sampling from a fixed distribution of random numbers. We estimate $c^*$ from sample estimates of $\\mathbb{C}\\text{ov}[A, E]$ and $\\mathbb{V}\\text{ar}[E]$ where $A, E$ are sample realizations drawn from that distribution. As applied in the above mentioned references, and here, $A, E$ are American and European option prices obtained from Binomial trees. A Binomial tree of a given number of timesteps, `N_steps`, produces a  single, completely deterministic price. One can easily imagine using the technique on option prices produced by a (fixed) Monte Carlo engine where each realized price is a random number drawn from the distribution produced by that MC engine (number of timesteps, $r, \\sigma, T,...$ all fixed). Estimating c* from the first several realizations of (A, E), then allows to construct $Z$ with the above properties on subsequent simulations from that same MC engine.\n",
+    "Strictly speaking, this technique applies to sampling from a fixed distribution of random numbers. We estimate $c^*$ from sample estimates of $\\mathbb{C}\\text{ov}[A, E]$ and $\\mathbb{V}\\text{ar}[E]$ where $A, E$ are sample realizations drawn from that distribution. As applied in the above mentioned references, and here, $A, E$ are American and European option prices obtained from Binomial trees. A Binomial tree of a given number of timesteps, `N_steps`, produces a  single, completely deterministic price. One can easily imagine using the technique on option prices produced by a (fixed) Monte Carlo engine where each realized price is a random number drawn from the distribution produced by that MC engine (number of timesteps, $r, \\sigma, T,...$ all fixed). Estimating c* from the first several realizations of $(A, E)$, then allows to construct $Z$ with the above properties on subsequent simulations from that same MC engine.\n",
     "\n",
-    "What is the distribution we are drawing $A, E$ from when the are option prices produced by Binomial trees? Following the previous authors, we let the number of time steps, `N_steps`[<sup id=\"fn1-back\">1</sup>](#fn1), used in the construction of the binomial tree play the role of randomness, i.e., we estimate $c^*$, $\\mathbb{C}\\text{ov}[A,E], \\mathbb{V}\\text{ar}[E]$ from a 'sample' of trees having some range of `N_steps`. We imagine that by observing how $A, E$ covary, we can form the above $Z$, which will then have the same mean and smaller variance over this selected range of `N_steps`. Let's see how this works.\n",
+    "What is the distribution we are drawing $A, E$ from when the option prices are produced by Binomial trees? Following the previous authors, we let the number of time steps, `N_steps`[<sup id=\"fn1-back\">1</sup>](#fn1), used in the construction of the binomial tree play the role of randomness, i.e., we estimate $c^*$, $\\mathbb{C}\\text{ov}[A,E], \\mathbb{V}\\text{ar}[E]$ from a 'sample' of trees having some range of `N_steps`. We imagine that by observing how $A, E$ covary, we can form the above $Z$, which will then have the same mean and smaller variance over this selected range of `N_steps`. Let's see how this works.\n",
     "\n",
     "\n",
     "\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "96276f74",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ca34daf2",
    "metadata": {
     "code_folding": []
@@ -88,12 +88,43 @@
     "    double e = euro_put.btree_prc(N_steps, r, get_greeks);\n",
     "    outfile << N_steps << \",\" << std::setprecision(12) << a << ',' << e << \"\\n\";\n",
     "}\n",
-    "outfile.close();\n"
+    "outfile.close();\n",
+    "\n",
+    "// Write to another file their prices on some other set of binomial trees:\n",
+    "int test_start_N = 4000;\n",
+    "int test_end_N = 4000 + N_points - 1;\n",
+    "outfile.open(\"prcs_4000-4080.csv\", std::ios_base::out);\n",
+    "for (int N_steps = test_start_N; N_steps < test_end_N + 1; ++N_steps) {\n",
+    "    double a = amer_put.btree_prc(N_steps, r, get_greeks);\n",
+    "    double e = euro_put.btree_prc(N_steps, r, get_greeks);\n",
+    "    outfile << N_steps << \",\" << std::setprecision(10) << a << ',' << e << \"\\n\";\n",
+    "}\n",
+    "outfile.close();\n",
+    "\n",
+    "\n",
+    "// Write to another file their prices on some other set of binomial trees:\n",
+    "test_start_N = 8000;\n",
+    "test_end_N = 8000 + N_points - 1;\n",
+    "outfile.open(\"prcs_8000-8080.csv\", std::ios_base::out);\n",
+    "for (int N_steps = test_start_N; N_steps < test_end_N + 1; ++N_steps) {\n",
+    "    double a = amer_put.btree_prc(N_steps, r, get_greeks);\n",
+    "    double e = euro_put.btree_prc(N_steps, r, get_greeks);\n",
+    "    outfile << N_steps << \",\" << std::setprecision(10) << a << ',' << e << \"\\n\";\n",
+    "}\n",
+    "outfile.close();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82741e15",
+   "metadata": {},
+   "source": [
+    "To run this Jupyter Notebook, the kernel must now be switched from C++14 to Python 3. In the menu above, click `Kernel` then `Change kernel`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "6a523256",
    "metadata": {
     "code_folding": [
@@ -218,28 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f1fd6a3",
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "   // Write to another file their prices on some other set of binomial trees:\n",
-    "    int test_start_N = 4000;\n",
-    "    int test_end_N = 4000 + N_points - 1;\n",
-    "    outfile.open(\"prcs_4000-4080.csv\", std::ios_base::out);\n",
-    "    for (int N_steps = test_start_N; N_steps < test_end_N + 1; ++N_steps) {\n",
-    "        double a = amer_put.btree_prc(N_steps, r, get_greeks);\n",
-    "        double e = euro_put.btree_prc(N_steps, r, get_greeks);\n",
-    "        outfile << N_steps << \",\" << std::setprecision(10) << a << ',' << e << \"\\n\";\n",
-    "    }\n",
-    "    outfile.close();\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "7ee9b4d3",
    "metadata": {
     "code_folding": [
@@ -330,30 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bdddd29a",
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "   // Write to another file their prices on some other set of binomial trees:\n",
-    "    int test_start_N = 8000;\n",
-    "    int test_end_N = 8000 + N_points - 1;\n",
-    "    outfile.open(\"prcs_8000-8080.csv\", std::ios_base::out);\n",
-    "    for (int N_steps = test_start_N; N_steps < test_end_N + 1; ++N_steps) {\n",
-    "        double a = amer_put.btree_prc(N_steps, r, get_greeks);\n",
-    "        double e = euro_put.btree_prc(N_steps, r, get_greeks);\n",
-    "        outfile << N_steps << \",\" << std::setprecision(10) << a << ',' << e << \"\\n\";\n",
-    "    }\n",
-    "    outfile.close();\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "df4aa395",
    "metadata": {
     "code_folding": [
@@ -443,12 +430,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "db661fd0",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -476,10 +461,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7faeeec5b970>"
+       "<matplotlib.collections.PathCollection at 0x7fe1f71e0ee0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -613,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "dcd37513",
    "metadata": {},
    "outputs": [
@@ -623,7 +608,7 @@
        "Text(0, 0.5, 'Price')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -658,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "0cc5ff74",
    "metadata": {},
    "outputs": [
@@ -671,7 +656,7 @@
        " array([1.99025152, 1.9904451 , 1.99049271, 1.9905045 , 1.99050744]))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,16 +670,25 @@
    "id": "aba944f6",
    "metadata": {},
    "source": [
-    "We see that these have nice 'pinching' convergence property. For any pair of pairs, (L,H), (l,h), for example (1.99102904, 1.99025152) at 1024, 1025 and (1.99051048, 1.99050744) at 262144, 262145, we perform iterate to convergence to find limiting $\\alpha$ f $x_i = l + \\alpha_i*(h-l) = L + \\alpha_{i+1}$, \n",
+    "We see that these have nice 'pinching' convergence property. For any pair of pairs, (L,H), (l,h), for example (1.99102904, 1.99025152) at 1024, 1025 and (1.99051048, 1.99050744) at 262144, 262145, we iterate to convergence to find limiting $\\alpha$ from $x_i = l + \\alpha_i*(h-l) = L + \\alpha_{i+1}(H-L)$, \n",
     "$$ \\alpha_i = {x_{i-1}-L\\over H-L},\\ \\ \\ \\  x_0 =0.5$$\n",
-    "This just confirms a guess that the above plot of A vs `N_steps` is self-similar, that for any value of `N_steps` the true option price lies the same fraction of the way from L to H, the ratio of {the distance from the bottom blue curve to the horizontal line representing the true option price} to {the distance from the bottom blue line to the top orange curve}, $\\alpha$, is constant independent of `N_steps`. "
+    "This scheme is based on a guess that the above plot of A vs `N_steps` is self-similar, that for any value of `N_steps` the true option price lies the same fraction of the way from L to H, the ratio of {the distance from the bottom blue curve to the horizontal line representing the true option price} to {the distance from the bottom blue line to the top orange curve}, $\\alpha$, is constant independent of `N_steps`. Self-similarity is confirmed by the constance of the (high - low) gap ratio between `N_steps` points pairs, i.e., $$(\\text{highs}[i]-\\text{lows}[i])\\ /\\ (\\text{highs}[i+j] - \\text{lows}[i+j]) = k(j)$$\n",
+    ", e.g.,\n",
+    "$${1.99102904 - 1.99025152\\over 1.99063959 - 1.9904451} = 3.9977,\\ \\ \\  i, j = 0, 1\\newline$$ \n",
+    "$${1.99063959 - 1.9904451 \\over 1.99054134 - 1.99049271} = 3.99938, \\ \\ \\ \\ i, j = 1, 2\\newline$$ \n",
+    "$${1.99054134 - 1.99049271 \\over 1.99051048 - 1.99050744} = 15.9967 \\approx 4^2 = 16, \\ \\ \\ \\ i, j = 2, 4\\ \\  etc.\\newline $$\n",
+    "The gap ratio between succesive steps is the same as the `N_steps` ratio between those same steps! ($=4$) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "c1f0a648",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [],
    "source": [
     "def get_alpha_lim(L, H, l, h):\n",
@@ -719,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "f0d477da",
    "metadata": {},
    "outputs": [
@@ -727,25 +721,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.33202150301293976 -1.931032230451102e-06 x:  1.9905096726957419\n",
-      "0.33089710407479517 -2.4259816517879784e-06 x:  1.9905087984531245\n",
-      "0.330536387430527 -6.37821960969287e-07 x:  1.9905085179887336\n",
-      "0.33043583018318967 -2.581596511563866e-06 x:  1.9905084398034667\n",
-      "0.32640524059790554 -1.9888089713981927e-06 x:  1.990508579990657\n",
-      "0.3257898572769154 -2.493931999580923e-06 x:  1.990508460302275\n",
-      "0.32560899264451565 -6.553633618566757e-07 x:  1.9905084251251837\n",
-      "0.3233312483705054 -2.022519855260363e-06 x:  1.9905084304044074\n",
-      "0.32306370860702105 -2.532272881938802e-06 x:  1.9905084173938363\n",
-      "0.32199611946322154 -2.0382449741895847e-06 x:  1.9905084141471199\n"
+      "i, j   alpha_lim   x_lim\n",
+      "0, 1:  0.3320215   1.990509673\n",
+      "0, 2:  0.3308971   1.990508798\n",
+      "0, 3:  0.3305364   1.990508518\n",
+      "0, 4:  0.3304358   1.990508440\n",
+      "1, 2:  0.3264052   1.990508580\n",
+      "1, 3:  0.3257899   1.990508460\n",
+      "1, 4:  0.3256090   1.990508425\n",
+      "2, 3:  0.3233312   1.990508430\n",
+      "2, 4:  0.3230637   1.990508417\n",
+      "3, 4:  0.3219961   1.990508414\n"
      ]
     }
    ],
    "source": [
     "# get limiting alpha for each pair of (low,high) points paired up with each pair of (low,high) points to the right:\n",
+    "print(\"i, j   alpha_lim   x_lim\")\n",
     "for i in range(len(lows)):\n",
     "    for j in range(i+1, len(lows)):\n",
     "        alpha_lim, delta_alpha = get_alpha_lim(lows[i], highs[i], lows[j], highs[j])\n",
-    "        print(alpha_lim, delta_alpha, \"x: \", lows[i] + alpha_lim * (highs[i] - lows[i]))\n",
+    "        print(f\"{i}, {j}: {alpha_lim:10.7f}  {lows[i] + alpha_lim * (highs[i] - lows[i]):12.9f}\")\n",
     "\n"
    ]
   },
@@ -759,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "0c833d3d",
    "metadata": {},
    "outputs": [
@@ -770,12 +766,13 @@
        " array([1.99102904, 1.99102803, 1.99102703, 1.99102604, 1.99102505]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Read in 5 low/high pairs of A, N_steps on [1024, 1033]:  \n",
     "N_steps_1024, a = np.loadtxt(\"prcs_1024_cluster.csv\", delimiter=',', unpack=True)\n",
     "\n",
     "a[::2], a[1::2]"
@@ -783,18 +780,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "b201bd82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "L, H = a[::2].mean(), a[1::2].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "ae2342fa",
    "metadata": {},
    "outputs": [
     {
@@ -803,28 +790,29 @@
        "(1.9902525239639999, 1.99102703671)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "L, H = a[::2].mean(), a[1::2].mean()\n",
     "L, H"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "d2aec814",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.33042167196394506, -2.6018603800359585e-06, 1.9905084397604906)"
+       "(0.33042167196394506, 1.9905084397604906)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,12 +820,12 @@
    "source": [
     "# Get limiting alpha between this averaged left end point and the extreme right end point:\n",
     "alpha_lim, delta_alpha = get_alpha_lim(L, H, lows[len(lows)-1], highs[len(lows)-1])\n",
-    "alpha_lim, delta_alpha, L + alpha_lim * (H - L)"
+    "alpha_lim, L + alpha_lim * (H - L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "4da0eec2",
    "metadata": {},
    "outputs": [
@@ -847,7 +835,7 @@
        "1.9905084397525816"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,41 +846,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "3f18b209",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.9905084397604906"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "L + alpha_lim * (H - L)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2287d773",
    "metadata": {},
    "source": [
-    "Calculating option prices on a consecutive N_steps pair of trees at large N, iterating for $\\alpha_\\infty$ between this pair and a left end point pair(or better average of several consecutive pairs for left end point). Then can quickly, accuratly calculate option price from $L + \\alpha_\\infty (H - L)$.\n",
+    "#### Summary\n",
+    "Calculating option prices on a consecutive N_steps pair of trees at large N, iterating for $\\alpha_\\infty$ between this pair and a left end point pair(or better average of several consecutive pairs for left end point). Then can quickly, accurately calculate option price from $L + \\alpha_\\infty (H - L)$.\n",
     "\n",
-    "How does $\\alpha_\\infty$ depend on option parameters?\n",
-    "And see: [Asymptotics of the binomial formula for option pricing](http://math.unice.fr/~diener/crr/crreng.ps)"
+    "I would think that $\\alpha_\\infty$ would depend on the particular option (parameters) that is being priced. But then the appearance of the number $4=k(1)$ above would be pure coincidence. This suggests that we have stumbled upon a way to bypass the construction of large binomial trees for accurate option prices universally applicable to American Puts.\n",
+    "\n",
+    "See: [Asymptotics of the binomial formula for option pricing](http://math.unice.fr/~diener/crr/crreng.ps)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d1887d",
+   "id": "3ccd0367",
    "metadata": {},
    "outputs": [],
    "source": []
